--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <a href="./index.html" class="logo"><span class="logo-first">Web</span><span
             class="logo-second-black">Studio</span></a>
         <ul class="navigation">
-          <li class="current">
-            <a href="./index.html">
+          <li>
+            <a class="current" href="./index.html">
               Студия
             </a>
           </li>
