--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
               Студия
             </a>
           </li>
-          <li class="current">
-            <a href="./portfolio.html">
+          <li>
+            <a class="current" href="./portfolio.html">
               Портфолио
             </a>
           </li>
